v1.1.0/modules/schema/pages/class/ConfigurationEvent.adoc
= `ConfigurationEvent`
:toclevels: 4


+++Used to report details on creation, change or deletion of an entity or its configuration.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ConfigurationEvent`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ActivityRecord.adoc[`ActivityRecord`]
*** *`ConfigurationEvent`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ChangedAsset,`ChangedAsset`>>
//| [[slots_table.ChangedAsset]]<<ChangedAsset,`ChangedAsset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++Asset whose change resulted in this configuration event.+++
| _n/a_

| <<ChangedDocument,`ChangedDocument`>>
//| [[slots_table.ChangedDocument]]<<ChangedDocument,`ChangedDocument`>>
| 0..1 +
xref::class/Document.adoc[`Document`]
| +++Document whose change resulted in this configuration event.+++
| _n/a_

| <<ChangedLocation,`ChangedLocation`>>
//| [[slots_table.ChangedLocation]]<<ChangedLocation,`ChangedLocation`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location whose change resulted in this configuration event.+++
| _n/a_

| <<ChangedOrganisationRole,`ChangedOrganisationRole`>>
//| [[slots_table.ChangedOrganisationRole]]<<ChangedOrganisationRole,`ChangedOrganisationRole`>>
| 0..1 +
xref::class/OrganisationRole.adoc[`OrganisationRole`]
| +++Organisation role whose change resulted in this configuration event.+++
| _n/a_

| <<ChangedPersonRole,`ChangedPersonRole`>>
//| [[slots_table.ChangedPersonRole]]<<ChangedPersonRole,`ChangedPersonRole`>>
| 0..1 +
xref::class/PersonRole.adoc[`PersonRole`]
| +++Person role whose change resulted in this configuration event.+++
| _n/a_

| <<ChangedServiceCategory,`ChangedServiceCategory`>>
//| [[slots_table.ChangedServiceCategory]]<<ChangedServiceCategory,`ChangedServiceCategory`>>
| 0..1 +
xref::class/ServiceCategory.adoc[`ServiceCategory`]
| +++Service category whose change resulted in this configuration event.+++
| _n/a_

| <<ChangedUsagePoint,`ChangedUsagePoint`>>
//| [[slots_table.ChangedUsagePoint]]<<ChangedUsagePoint,`ChangedUsagePoint`>>
| 0..1 +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++Usage point whose change resulted in this configuration event.+++
| _n/a_

| <<FaultCauseType,`FaultCauseType`>>
//| [[slots_table.FaultCauseType]]<<FaultCauseType,`FaultCauseType`>>
| 1 +
xref::class/FaultCauseType.adoc[`FaultCauseType`]
| +++Fault cause type whose change resulted in this configuration event.+++
| _n/a_

| <<PowerSystemResource,`PowerSystemResource`>>
//| [[slots_table.PowerSystemResource]]<<PowerSystemResource,`PowerSystemResource`>>
| 0..1 +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++Power system resource whose change resulted in this configuration event.+++
| _n/a_

| <<effectiveDateTime,`effectiveDateTime`>>
//| [[slots_table.effectiveDateTime]]<<effectiveDateTime,`effectiveDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this event has or will become effective.+++
| _n/a_

| <<modifiedBy,`modifiedBy`>>
//| [[slots_table.modifiedBy]]<<modifiedBy,`modifiedBy`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Source/initiator of modification.+++
| _n/a_

| <<remark,`remark`>>
//| [[slots_table.remark]]<<remark,`remark`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Free text remarks.+++
| _n/a_

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets for which this activity record has been created.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<Document,`Document`>>
//| [[slots_table.Document]]<<Document,`Document`>>
| 0..1 +
xref::class/Document.adoc[`Document`]
| +++The document having associated activity records+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this activity record has been created (different from the 'status.dateTime', which is the time of a status...+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<reason,`reason`>>
//| [[slots_table.reason]]<<reason,`reason`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Reason for event resulting in this activity record, typically supplied when user initiated.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<severity,`severity`>>
//| [[slots_table.severity]]<<severity,`severity`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Severity level of event resulting in this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Information on consequence of event resulting in this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Type of event resulting in this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets for which this activity record has been created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#ChangedAsset]
=== `ChangedAsset`
+++Asset whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedAsset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ChangedAsset,&#10548;>>
--
////


//[discrete]
[#ChangedDocument]
=== `ChangedDocument`
+++Document whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedDocument`
| Cardinality
| 0..1
| Type
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ChangedDocument,&#10548;>>
--
////


//[discrete]
[#ChangedLocation]
=== `ChangedLocation`
+++Location whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedLocation`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]


|===

////
[.text-left]
--
<<slots_table.ChangedLocation,&#10548;>>
--
////


//[discrete]
[#ChangedOrganisationRole]
=== `ChangedOrganisationRole`
+++Organisation role whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedOrganisationRole`
| Cardinality
| 0..1
| Type
| xref::class/OrganisationRole.adoc[`OrganisationRole`]


|===

////
[.text-left]
--
<<slots_table.ChangedOrganisationRole,&#10548;>>
--
////


//[discrete]
[#ChangedPersonRole]
=== `ChangedPersonRole`
+++Person role whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedPersonRole`
| Cardinality
| 0..1
| Type
| xref::class/PersonRole.adoc[`PersonRole`]


|===

////
[.text-left]
--
<<slots_table.ChangedPersonRole,&#10548;>>
--
////


//[discrete]
[#ChangedServiceCategory]
=== `ChangedServiceCategory`
+++Service category whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedServiceCategory`
| Cardinality
| 0..1
| Type
| xref::class/ServiceCategory.adoc[`ServiceCategory`]


|===

////
[.text-left]
--
<<slots_table.ChangedServiceCategory,&#10548;>>
--
////


//[discrete]
[#ChangedUsagePoint]
=== `ChangedUsagePoint`
+++Usage point whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.ChangedUsagePoint`
| Cardinality
| 0..1
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ChangedUsagePoint,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time this activity record has been created (different from the 'status.dateTime', which is the time of a status change of the associated object, if applicable).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#Document]
=== `Document`
+++The document having associated activity records+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.Document`
| Cardinality
| 0..1
| Type
| xref::class/Document.adoc[`Document`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.Document,&#10548;>>
--
////


//[discrete]
[#effectiveDateTime]
=== `effectiveDateTime`
+++Date and time this event has or will become effective.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.effectiveDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.effectiveDateTime,&#10548;>>
--
////


//[discrete]
[#FaultCauseType]
=== `FaultCauseType`
+++Fault cause type whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.FaultCauseType`
| Cardinality
| 1
| Type
| xref::class/FaultCauseType.adoc[`FaultCauseType`]


|===

////
[.text-left]
--
<<slots_table.FaultCauseType,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#modifiedBy]
=== `modifiedBy`
+++Source/initiator of modification.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.modifiedBy`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.modifiedBy,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PowerSystemResource]
=== `PowerSystemResource`
+++Power system resource whose change resulted in this configuration event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.PowerSystemResource`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResource,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#reason]
=== `reason`
+++Reason for event resulting in this activity record, typically supplied when user initiated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.reason`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.reason,&#10548;>>
--
////


//[discrete]
[#remark]
=== `remark`
+++Free text remarks.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConfigurationEvent.remark`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.remark,&#10548;>>
--
////


//[discrete]
[#severity]
=== `severity`
+++Severity level of event resulting in this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.severity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.severity,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Information on consequence of event resulting in this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Type of event resulting in this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Asset.adoc[`Asset`] | xref::class/Asset.adoc#ConfigurationEvents[`ConfigurationEvents`]



| xref::class/Document.adoc[`Document`] | xref::class/Document.adoc#ConfigurationEvents[`ConfigurationEvents`]



| xref::class/FaultCauseType.adoc[`FaultCauseType`] | xref::class/FaultCauseType.adoc#ConfigurationEvent[`ConfigurationEvent`]



| xref::class/Location.adoc[`Location`] | xref::class/Location.adoc#ConfigurationEvents[`ConfigurationEvents`]



| xref::class/OrganisationRole.adoc[`OrganisationRole`] | xref::class/OrganisationRole.adoc#ConfigurationEvents[`ConfigurationEvents`]



| xref::class/PersonRole.adoc[`PersonRole`] | xref::class/PersonRole.adoc#ConfigurationEvents[`ConfigurationEvents`]



| xref::class/PowerSystemResource.adoc[`PowerSystemResource`] | xref::class/PowerSystemResource.adoc#ConfigurationEvent[`ConfigurationEvent`]



| xref::class/ServiceCategory.adoc[`ServiceCategory`] | xref::class/ServiceCategory.adoc#ConfigurationEvents[`ConfigurationEvents`]



| xref::class/UsagePoint.adoc[`UsagePoint`] | xref::class/UsagePoint.adoc#ConfigurationEvents[`ConfigurationEvents`]


|===

